# Novel_final

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  celery_app.py  database.py  docker-compose.yml  main.py  pyproject.toml  redis_client.py  settings.py
models/: __init__.py  chapter.py  comment.py  like.py  novel.py  novel_tag.py  review.py  tag.py  user.py
routes/: novel.py
schemas/: chapter.py  comment.py  novel.py  review.py  tag.py  user.py
